# fastapi_quotes

./: .gitignore  C:\Windows\Temp\First_run.txt  database.db  main.py  pyproject.toml  test2.db  testing.py
Database/: database.db  database.db-journal  database2.db  database2.sqbpro  hash.py  schema.py  storage.py
database/: storage.py
models/: quote_models.py
utils/: helpers.py
