[project]
name = "fastapi-quotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.120.0",
    "jwt>=1.4.0",
    "pydantic>=2.12.3",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.27",
]
